fixed modal in project not and z-index for radio buttons

--- a/src/styles/pages/_portfolio.scss
+++ b/src/styles/pages/_portfolio.scss
@@ -124,15 +124,15 @@
       }
     }
     .showInfos {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      bottom: 0;
-      right: 0;
-      height: 150%;
+      height: 100%;
+      width: 100%;
       background: rgba(0, 0, 0, 0.507);
       animation: popup 0.3s ease forwards;
       transform-origin: center;
+      z-index: 10;
 
       .infosContent {
         position: relative;
